--- a/Aulas/Semana2/aula1.html
+++ b/Aulas/Semana2/aula1.html
@@ -6,13 +6,15 @@
     <title>Aula 1</title>
 
     <link rel="shortcut icon" href="./assets/imgs/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/aula2.css">
 </head>
 <body>
-   <h1>Aula 1</h1> 
+   <h1 class="destaque">Aula 1</h1> 
 
    <img src="./assets/imgs/danitl-logo.png" alt="logo dani" width="400px">
 
    <p>Olá, me chamo Daniele Tavares Lobo!
+    <br>
     Este é um exemplo de atividade solicitada na aula 1.
    </p>
 
@@ -45,9 +47,13 @@
     </tbody>
     <tfoot>
         <tr>
-            <td colspan="5">Total: 97,5%</td>
+            <td colspan="5" id="bold">Total: 97,5%</td>
         </tr>
     </tfoot>
    </table>
+
+   <div>
+    <p>Página Criada para a semana 2 de aula</p>
+   </div>
 </body>
 </html>
