--- a/Trello/Semana2/login.html
+++ b/Trello/Semana2/login.html
@@ -6,24 +6,30 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    
+    <div id="login">
 
-    <div class="card">
-        <div class="card-body">
-            <form>
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Email</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu email">
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">Senha</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite sua senha">
-                </div>
-                <button type="submit" class="btn btn-info">Enviar</button>
-              </form>
+        <div class="caixa">
+            <h1>Login</h1>
+
+            <div class="email">
+                <input type="email" placeholder="Digite seu E-mail">
+            </div>
+
+            <div class="senha">
+                <input type="password" placeholder="Digite sua Senha">
+            </div>
+
+            <div class="entrar">
+                <button type="submit" class="btn">Entrar</button>
+            </div>
+
         </div>
-      </div>
+
+    </div>
 
 </body>
 </html>
