--- a/Trello/Semana2/login.html
+++ b/Trello/Semana2/login.html
@@ -7,12 +7,15 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="login.css">
+    <link rel="shortcut icon" href="../../Aulas/Semana2/assets/imgs/favicon.svg" type="image/x-icon">
 </head>
 <body>
     
     <div id="login">
 
         <div class="caixa">
+
+            <img src="../../Aulas/Semana2/assets/imgs/danitl-logo.png" alt="">
             <h1>Login</h1>
 
             <div class="email">
