[M1S02] Ex 6 - CSS: Pão Artesanal

--- a/Trello/Semana2/pao.html
+++ b/Trello/Semana2/pao.html
@@ -6,6 +6,7 @@
     <title>Pão de Verdade</title>
 
     <link rel="shortcut icon" href="../../Aulas/Semana2/assets/imgs/pao.png" type="image/x-icon">
+    <link rel="stylesheet" href="pao.css">
 </head>
 <body>
     <div class="container">
@@ -16,11 +17,12 @@
 
         <div class="texto">
             <p>Na correria do dia a dia, é fácil esquecer o prazer de saborear um pão feito com calma, carinho e ingredientes de verdade. Aqui, cada pão é uma obra de arte: fermentação natural, crosta dourada, miolo macio e aroma inconfundível.
-            <br>
+            <br><br>
             Usamos apenas farinhas selecionadas, processos tradicionais e o tempo certo de fermentação para criar pães que alimentam o corpo e encantam o paladar. Nada de conservantes, nada de pressa – só o que há de melhor na panificação artesanal.
-            <br>
+            <br><br>
             Seja um pão de fermentação natural, um pão rústico com grãos, ou uma focaccia temperada, temos sempre uma fornada especial esperando por você.
             </p>
+            <br>
             <h2>🍞 Pão de verdade, feito à mão. 
             <br>
             ❤️ Do nosso forno para a sua mesa.</h2>
