MiniProjeto: Perfil de usuário

--- a/Trello/MiniProjeto-Semana7/acoesReflorestamento/cadastroReflorestamento.html
+++ b/Trello/MiniProjeto-Semana7/acoesReflorestamento/cadastroReflorestamento.html
@@ -23,7 +23,7 @@
             
             <div class="user-info" id="user-info">
                 <div class="user-avatar">
-                    <img id="nav-avatar" src="/api/placeholder/32/32" alt="Avatar do usuário">
+                    <img id="nav-avatar" src="" alt="Avatar do usuário">
                 </div>
                 <span id="nav-user-name">Usuário</span>
             </div>
