--- a/Trello/MiniProjeto-Semana7/cadastroUsuario/cadastroUsuario.html
+++ b/Trello/MiniProjeto-Semana7/cadastroUsuario/cadastroUsuario.html
@@ -36,17 +36,17 @@
                 <p>Seu avatar determinará o tema visual da sua experiência na plataforma.</p>
                 <div class="tree-selection">
                     <div class="tree-option" data-tree="pau-brasil">
-                        <img src="../assets/avatar_pau_brasil.png" alt="Pau-Brasil" class="tree-img">
+                        <img src="../assets/pau-brasil-madura.png" alt="Pau-Brasil" class="tree-img">
                         <div class="tree-name">Pau-Brasil</div>
                         <div class="tree-desc">Tom avermelhado, símbolo da nossa identidade nacional</div>
                     </div>
                     <div class="tree-option" data-tree="castanheira">
-                        <img src="../assets/avatar_castanheira.png" alt="Castanheira" class="tree-img">
+                        <img src="../assets/castanheira-madura.png" alt="Castanheira" class="tree-img">
                         <div class="tree-name">Castanheira</div>
                         <div class="tree-desc">Tom marrom, representando força e resiliência</div>
                     </div>
                     <div class="tree-option" data-tree="peroba-rosa">
-                        <img src="../assets/avatar_peroba_rosa.png" alt="Peroba-Rosa" class="tree-img">
+                        <img src="../assets/peroba-rosa-madura.png" alt="Peroba-Rosa" class="tree-img">
                         <div class="tree-name">Peroba-Rosa</div>
                         <div class="tree-desc">Tom rosado, simbolizando renovação e esperança</div>
                     </div>
@@ -59,6 +59,12 @@
         </form>
     </div>
 
-    <script src="cadastro.js"></script>
+    <div id="toast" class="toast">
+        <span id="toast-icon" class="toast-icon">✓</span>
+        <span id="toast-text" class="toast-text">Mensagem</span>
+        <span class="toast-close" onclick="fecharToast()">×</span>
+    </div>
+
+    <script src="cadastroUsuario.js"></script>
 </body>
 </html>
