--- a/Trello/MiniProjeto-Semana7/destaquesReflorestamento/destaques.html
+++ b/Trello/MiniProjeto-Semana7/destaquesReflorestamento/destaques.html
@@ -7,28 +7,7 @@
     <link rel="stylesheet" href="styleDestaques.css">
 </head>
 <body>
-    <nav id="main-nav">
-        <div class="nav-container">
-            <a href="index.html" class="nav-logo">
-                <img src="../assets/logo.png" alt="Logo Reflorestamento">
-                Reflorestamento
-            </a>
-            
-            <ul id="menu-list">
-                <li><a href="cadastro-reflorestamento.html" id="nav-acoes">Cadastrar Ações</a></li>
-                <li><a href="perfil-usuario.html" id="nav-perfil">Meu Perfil</a></li>
-                <li><a href="relatorio-reflorestamento.html" id="nav-relatorio">Relatórios</a></li>
-                <li><a href="destaques-reflorestamento.html" id="nav-destaques" class="active">Destaques</a></li>
-            </ul>
-            
-            <div class="user-info" id="user-info">
-                <div class="user-avatar">
-                    <img id="nav-avatar" src="" alt="Avatar do usuário">
-                </div>
-                <span id="nav-user-name">Usuário</span>
-            </div>
-        </div>
-    </nav>
+    <nav id="menu-container"></nav>
 
     <div class="container">
         <header>
@@ -46,5 +25,6 @@
     </div>
 
     <script src="destaques.js"></script>
+    <script src="../menuComponente/menu-componente.js"></script>
 </body>
 </html>
