--- a/Trello/MiniProjeto-Semana7/relatorioReflorestamento/relatorio.html
+++ b/Trello/MiniProjeto-Semana7/relatorioReflorestamento/relatorio.html
@@ -7,28 +7,7 @@
     <link rel="stylesheet" href="styleRelatorio.css">
 </head>
 <body>
-    <nav id="main-nav">
-        <div class="nav-container">
-            <a href="index.html" class="nav-logo">
-                <img src="../assets/logo.png" alt="Logo Reflorestamento">
-                Reflorestamento
-            </a>
-            
-            <ul id="menu-list">
-                <li><a href="cadastro-reflorestamento.html" id="nav-acoes">Cadastrar Ações</a></li>
-                <li><a href="perfil-usuario.html" id="nav-perfil">Meu Perfil</a></li>
-                <li><a href="relatorio-reflorestamento.html" id="nav-relatorio" class="active">Relatórios</a></li>
-                <li><a href="destaques-reflorestamento.html" id="nav-destaques">Destaques</a></li>
-            </ul>
-            
-            <div class="user-info" id="user-info">
-                <div class="user-avatar">
-                    <img id="nav-avatar" src="" alt="Avatar do usuário">
-                </div>
-                <span id="nav-user-name">Usuário</span>
-            </div>
-        </div>
-    </nav>
+    <nav id="menu-container"></nav>
 
     <div class="container">
         <header>
@@ -76,7 +55,7 @@
                         </tr>
                     </thead>
                     <tbody id="results-body">
-                        <!-- Os resultados serão inseridos aqui -->
+
                     </tbody>
                 </table>
                 <div id="no-results" class="no-results" style="display: none;">
@@ -86,6 +65,13 @@
         </div>
     </div>
 
-    <script src="relatorio.js"></script>
+    <div id="toast" class="toast">
+        <span id="toast-icon" class="toast-icon">✓</span>
+        <span id="toast-text" class="toast-text">Mensagem</span>
+        <span class="toast-close" onclick="fecharToast()">×</span>
+    </div>
+
+    <script src="../menuComponente/menu-componente.js"></script>
+    <script src="./relatorio.js"></script>    
 </body>
 </html>
