--- a/Trello/MiniProjeto-Semana7/acoesReflorestamento/acoesReflorestamento.html
+++ b/Trello/MiniProjeto-Semana7/acoesReflorestamento/acoesReflorestamento.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Ações - Reflorestamento</title>
     <link rel="stylesheet" href="styleAcoes.css">
-    
+    <link rel="shortcut icon" href="../assets/logo.ico" type="image/x-icon">
     <script src="../menuComponente/menu-componente.js"></script>
 </head>
 <body>
