--- a/Trello/MiniProjeto-Semana7/cadastroUsuario/cadastroUsuario.html
+++ b/Trello/MiniProjeto-Semana7/cadastroUsuario/cadastroUsuario.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Reflorestamento</title>
     <link rel="stylesheet" href="styleCadastro.css">
+    <link rel="shortcut icon" href="../assets/logo.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
