--- a/Trello/MiniProjeto-Semana7/relatorioReflorestamento/relatorio.html
+++ b/Trello/MiniProjeto-Semana7/relatorioReflorestamento/relatorio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relatório de Reflorestamento</title>
     <link rel="stylesheet" href="styleRelatorio.css">
+    <link rel="shortcut icon" href="../assets/logo.ico" type="image/x-icon">
 </head>
 <body>
     <nav id="menu-container"></nav>
