--- a/Aulas/Semana4/testes.html
+++ b/Aulas/Semana4/testes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Módulo 1 - Semana 4</title>
-    <script src="arrow.js"></script>
+    <script src="exemploSexta.js"></script>
 </head>
 <body>
     
