--- a/Trello/Semana4/numeros.html
+++ b/Trello/Semana4/numeros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercícios Semana 4</title>
-    <script src="arrowFunction.js"></script>
+    <script src="menu.js"></script>
 </head>
 <body>
     
