Ex 2 – Dados Iniciais: Jogo da Forca

--- a/Trello/Semana6/jogoForca.html
+++ b/Trello/Semana6/jogoForca.html
@@ -55,6 +55,7 @@
         <button id="resetButton" class="reset-button" style="display: none;">🔄 Novo Jogo</button>
     </div>
 
+    <script src="jogoForca.js"></script>
 </body>
 </html>
 
